<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/group_name"
        android:textSize="15sp"
        android:text="@string/groupName"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_weight="4"/>

    <TextView
        android:id="@+id/group_day"
        android:textSize="15sp"
        android:text="@string/dayOfWeek"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"/>

    <TextView
        android:id="@+id/group_start"
        android:textSize="15sp"
        android:text="@string/startHour"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>

    <TextView
        android:id="@+id/group_end"
        android:textSize="15sp"
        android:text="@string/endHour"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>
</LinearLayout>