<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manage.ManageFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TableRow
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/addSubjectButton"
                android:layout_width="125dp"
                android:layout_height="60dp"
                android:text="@string/addSubject"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/addGroupButton"
                android:layout_width="125dp"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:text="@string/addGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addSubjectButton" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/addStudentButton"
                android:layout_width="125dp"
                android:layout_height="60dp"
                android:text="@string/addStudent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addGroupButton" />

            <Button
                android:id="@+id/addStudentClassButton"
                android:layout_width="125dp"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:text="@string/addStudentClass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addStudentButton" />
        </TableRow>
    </TableLayout>



</androidx.constraintlayout.widget.ConstraintLayout>