<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".groups.ManageGroupsFragment">

    <Spinner
        android:id="@+id/subjectsList"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TableLayout
        android:id="@+id/contentTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/subjectsList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/subjectGroupName"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/groupName"
                android:textColorHint="#757575"
                android:textSize="15sp"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subjectsList"/>

            <EditText
                android:id="@+id/subjectStartHour"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/startHour"
                android:textColorHint="#757575"
                android:textSize="15sp"
                android:importantForAutofill="no"
                android:inputType="time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subjectDayOfWeek"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/subjectDayOfWeek"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subjectGroupName"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/subjectEndHour"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/endHour"
                android:textColorHint="#757575"
                android:textSize="15sp"
                android:importantForAutofill="no"
                android:inputType="time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subjectStartHour"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/addGroupButton"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentTable"/>
</androidx.constraintlayout.widget.ConstraintLayout>